--- a/src/app/categories/category-details/category-details.component.html
+++ b/src/app/categories/category-details/category-details.component.html
@@ -1,10 +1,11 @@
-<app-navigation-bar></app-navigation-bar>
-<app-category-hero-details
-[categoryName]="category"></app-category-hero-details>
-<app-category-introduction
-[categoryIntroduction]="categoryIntro"></app-category-introduction>
-<app-category-benefits
-[categoryBenefits]="categoryBenefit"></app-category-benefits>
-<app-category-tags
-[categoryTags]="categoryTag"></app-category-tags>
-<app-footer></app-footer>
+<!-- <app-category-hero-details [categoryName]="category"></app-category-hero-details>
+<app-category-introduction [categoryIntroduction]="categoryIntro"></app-category-introduction>
+<app-category-benefits [categoryBenefits]="categoryBenefit"></app-category-benefits>
+<app-category-tags [categoryTags]="categoryTag"></app-category-tags>
+<app-category-trainers [categoryTrainers]="categoryTrainer"></app-category-trainers>
+<app-category-centers [categoryCenters]="categoryCenter"></app-category-centers> -->
+
+<div class="mt-20 p-8 h-screen flex-col w-full font-extrabold">
+    <h2 class="mb-10 text-4xl text-red-600 ">Coming Soon.....</h2>
+    <p class="text-2xl text-white">This page is Under Construction</p>
+</div>
